# barcode-recognition-cpp

./: .gitignore  CMakeCache.txt  CMakeLists.txt  DisplayImage  DisplayImage.cpp  Makefile  README.md  cmake_install.cmake  main.cc
